Adicionando Aula 12 e atualizações da Aula 11

--- a/Aula11-HTML-Semantica/index.html
+++ b/Aula11-HTML-Semantica/index.html
@@ -99,6 +99,10 @@
 
         <h3>Título dentro da Div</h3>
         <p>Internamente, a "div" é um bloco anônimo, ou seja, está fora do contexto. Será usada para estruturar a página.</p>
+        <p>A Div não representa uma Estrutura Semântica.</p>
+        <p>- > Dentro das Divs trabalharemos com os elementos Semânticos!</p>
+
+
                 
     </div>
 
@@ -116,7 +120,7 @@
         <div>Exemplo - Navegação</div>
 
         <div>
-            <span>Exemplo - Span contida em uma tag Div para exemplificação de uma Section dentro de uma Div.</span>
+            <span>Exemplo - Span contida em uma tag Div para exemplificação de uma Span dentro de uma Div.</span>
         </div>
 
         <section>
