--- a/Aula13-CSS-Introducao/sintaxe/index.html
+++ b/Aula13-CSS-Introducao/sintaxe/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 13 - CSS - Introdução e Sintaxe</title>
+    <title>Anwar - Aula 13 - CSS - Introdução e Sintaxe</title>
 
     <!-- 3. Referenciando um Doc externo - CSS -->
 
